--- a/pad/css/style.css
+++ b/pad/css/style.css
@@ -9,7 +9,7 @@ body {
   
   button {
     padding: 10px;
-    background-color: #4CAF50;
+    background-color:#f5f5f5;
     color: white;
     border: none;
     cursor: pointer;
@@ -32,3 +32,33 @@ body {
     border-radius: 5px;
   }
   
+  .cadastro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  
+  .cadastro h1 {
+    margin-bottom: 20px;
+  }
+  
+  .cadastro form {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .cadastro input {
+    margin: 10px 0;
+    padding: 10px;
+    width: 100%;
+    max-width: 300px;
+  }
+  
+  .cadastro button {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
